layout bug fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@
 }
 
 html, body {
-	height: 100%;
+	min-height: calc(100vh - 18px);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
